removed gitignore on temp vendor dir, but have issue with loading ionic provider for testing

--- a/.jshintrc
+++ b/.jshintrc
@@ -25,6 +25,7 @@
         "require": false,
         "chrono": false,
         "gapi": false,
-        "d3": false
+        "d3": false,
+        "prompt": false
     }
 }
