--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "requirejs": "latest",
     "karma-requirejs": "latest",
     "karma-phantomjs-launcher": "latest",
-    "karma-browserify": "latest"
+    "karma-browserify": "0.0.6"
   },
   "napa": {
     "angular": "angular/bower-angular",
